[package]
name = "timed-todo"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = "4.0"                                                # For command-line argument parsing
chrono = { version = "0.4.19", features = ["serde"] }       # For handling dates and times
serde = { version = "1.0", features = ["derive"] }          # For serialization/deserialization
serde_json = "1.0"                                          # For JSON handling
rand = "0.8"                                                # For random number generation
notify-rust = "4.5"                                         # For sending desktop notifications
prettytable = "0.10.0"                                      # Pretty table for displaying tasks
